
Requirement changes
-------------------

- New eZ Components being used:
  - SystemInformation
  - Archive

Deprecated features
-------------------

- eZArchiveHandler
  This class and related sub-classes, such as eZTARArchiveHandler has been
  deprecated, they will be removed in eZ Publish 4.2. Archive from eZ Components
  is the intended replacement of this functionality.


Removed features
----------------

- eZSelectionType loose functions

  The file in which eZSelectionType is defined contained two loose functions, 
  namely serializeContentObjectAttribute and unserializeContentObjectAttribute,
  which at the time of introducing them were supposed to be inside the class 
  definition. These two functions have been removed.
  
- eZFilePassthroughHandler

  The deprecated class eZFilePassthroughHandler was removed. Use
  ezFilePassthroughHandler instead.
  
- eZXMLInputType

  The class eZXMLInputType, which was not any longer used by any part of the eZ
  Publish kernel, has been removed.
  
- eZURLTranslator

  The class eZURLTranslator, which was not any longer used by any part of the eZ
  Publish kernel, has been removed.


New constants in config.php
---------------------------

EZP_INI_FILEMTIME_CHECK
    This new setting controls whether eZINI should check if the settings have
    been updated in the *.ini-files*. If this check is disabled eZ Publish
    will always used the cached values, lowering the amount of stat-calls to
    the file system, and thus increasing performance.

EZP_AUTOLOAD_ALLOW_KERNEL_OVERRIDE
    This setting controls if eZ Publish's autoload system should allow, and
    load classes, which override kernel classes from extensions.

Changes to method signatures
----------------------------

- eZContentObject - fetchAttributesByIdentifier

  Parameter 3 is changed to be an array of locale codes, rather than a string
  with locale code.
  
- eZDBClusterFileHandler - getFileList
